# Capstone-2025

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  recommendation_evaluation_results.jsonl  recommendation_evaluation_results.txt
.github/workflows/: ci.yml
database/: projects_database_handler.py
docs/agent/: agent.md
evaluation/: recommendation_eval.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
llm/: StategraphAgent.py  agent.py  agent_test.py  state.py
llm/nodes/: expand_subqueries.py  filter_papers.py  filter_papers_node.py  get_best_papers.py  get_best_papers_node.py  input.py  input_node.py  no_results_handler.py  node_logger.py  out_of_scope_check.py  out_of_scope_handler.py  quality_control.py  quality_control_node.py  store_papers_for_project.py  update_papers_by_project.py
llm/tools/: paper_handling_tools.py
llm_pydantic/: agent.py  agent_cli.py  agent_test.py  graph_cli.py  state.py
llm_pydantic/nodes/: expand_subqueries.py  filter_papers.py  filter_papers_node.py  get_best_papers.py  input.py  input_node.py  no_results_handler.py  no_results_node.py  out_of_scope_check.py  out_of_scope_handler.py  out_of_scope_node.py  quality_control.py  quality_control_node.py  retrieve_papers_node.py  scope_node.py  store_papers_for_project.py  store_papers_node.py  update_papers_by_project.py
paper_handling/: paper_handler.py
scripts/: startup.sh
templates/: create_project.html  dashboard.html  project_overview.html
(+23 files in other folders)
