[project]
name = "capstone-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.0.12",
    "flask==3.1.1",
    "langchain-core==0.3.63",
    "langchain-openai==0.3.19",
    "langchain==0.3.25",
    "langgraph==0.5.0",
    "numpy==2.3.0",
    "openai==1.79.0",
    "psycopg2-binary==2.9.10",
    "pyalex==0.18",
    "pypdf==3.17.0",
    "python-dotenv==1.1.0",
    "requests==2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
